--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,24 @@
-server{
-  listen 80 default_server;
-  
-  location / {
-    root /usr/share/nginx/html;
-    index index.html
-    try_files $uri $uri/ /index.html;
-  }
+# upstream backend {
+#         server api:8089 weight=4;
+#         server api:8090 weight=3;
+#         server api:8091 weight=2;
+# }
+
+server {
+        listen 80;
+        access_log /var/log/nginx/moodshop.access.log;
+        error_log /var/log/nginx/moodshop.error.log debug;
+
+        location / {
+                root /usr/share/nginx/html;
+                index index.html;
+                try_files $uri /$uri /index.html;
+        }
+
+        # location /api { 
+        #         proxy_pass http://backend;       
+        #         proxy_set_header Host $host;
+        #         proxy_set_header X-Real-IP $remote_addr;
+        #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # }
 }
