--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,9 @@
 server {
-  listen              80;
-  listen              443 ssl;
-  server_name         www.example.com;
-  ssl_certificate     www.example.com.crt;
-  ssl_certificate_key www.example.com.key;
+  listen 80;
+#   listen 443 ssl;
+#   server_name www.example.com;
+#   ssl_certificate www.example.com.crt;
+#   ssl_certificate_key www.example.com.key;
 
   location / {
     root /usr/share/nginx/html;
