--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
 #   listen 443 ssl;
-#   server_name www.example.com;
+  server_name inyilis.online;
 #   ssl_certificate www.example.com.crt;
 #   ssl_certificate_key www.example.com.key;
 
